crates/check_module_graph/tests/snapshots/test_resolve_export_type_referencing_imported_type.snap
---
source: crates/check_module_graph/tests/snap/mod.rs
expression: content
---
# `/src/index.ts`

## Source

```ts
import type { PromisedResult } from "./promisedResult.ts";

function returnPromiseResult(): PromisedResult {
	return new Promise((resolve) => resolve({ result: true }));
}

export { returnPromiseResult };
```

## Module Info

```
Exports {
  "returnPromiseResult" => {
    ExportOwnExport => JsOwnExport::Binding(1)
  }
}
Imports {
  "PromisedResult" => {
    Specifier: "./promisedResult.ts"
    Resolved path: "/src/promisedResult.ts"
    Import Symbol: PromisedResult
  }
}
```

## Exported Bindings

```
BindingId(1) => JsBindingData {
  Name: returnPromiseResult,
  Type: Module(0) TypeId(7),
  Declaration kind: HoistedValue
}
```

## Registered types

```
Module TypeId(0) => Promise

Module TypeId(1) => Module(0) TypeId(7)

Module TypeId(2) => value: true

Module TypeId(3) => Object {
  prototype: No prototype
  members: ["result": Module(0) TypeId(2)]
}

Module TypeId(4) => instanceof Import Symbol: PromisedResult from "/src/promisedResult.ts"

Module TypeId(5) => sync Function {
  accepts: {
    params: [
      required resolve: unknown
    ]
    type_args: []
  }
  returns: Module(0) TypeId(4)
}

Module TypeId(6) => instanceof Module(0) TypeId(0)

Module TypeId(7) => sync Function "returnPromiseResult" {
  accepts: {
    params: []
    type_args: []
  }
  returns: Module(0) TypeId(4)
}
```

# `/src/promisedResult.ts`

## Source

```ts
export type PromisedResult = Promise<{ result: true | false }>;
```

## Module Info

```
Exports {
  "PromisedResult" => {
    ExportOwnExport => JsOwnExport::Binding(0)
  }
}
Imports {
  No imports
}
```

## Exported Bindings

```
BindingId(0) => JsBindingData {
  Name: PromisedResult,
  Type: Module(0) TypeId(4),
  Declaration kind: Type
}
```

## Registered types

```
Module TypeId(0) => value: true

Module TypeId(1) => value: false

Module TypeId(2) => Module(0) TypeId(0) | Module(0) TypeId(1)

Module TypeId(3) => Object {
  prototype: No prototype
  members: ["result": Module(0) TypeId(2)]
}

Module TypeId(4) => instanceof Promise<Module(0) TypeId(3)>
```
